--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,30 @@
+:root {
+  --accent-color: #4d96a9;
+  --second-accent-color: #855fb1;
+
+  --version-color: #8fe3f9;
+  --second-version-color: #d9b8ff;
+
+  --title-color: #28283d;
+  --text-color: #87879d;
+  --second-text-color: #fafafa;
+}
+
 body {
+  font-family: "Red Hat Display", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 144%;
   text-align: center;
+  color: var(--text-color);
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
 }
 
 .header {
@@ -23,15 +48,48 @@ body {
   padding-top: 47px;
   width: 540px;
   min-width: 540px;
+
+  display: flex;
+  flex-direction: column;
+  row-gap: 33px;
+}
+
+.hero-title {
+  font-weight: 900;
+  font-size: 64px;
+  line-height: 100%;
+  color: var(--title-color);
+}
+
+.btn-thumb {
+  display: flex;
+  gap: 16px;
+
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .btn {
   padding: 16px 40px;
-  background-color: aquamarine;
+  background-color: var(--accent-color);
   border: none;
   border-radius: 29px;
 
+  font-weight: 900;
+  font-size: 16px;
+  line-height: 162%;
+  color: #fff;
+
   cursor: pointer;
+}
+
+.btn-vetsion {
+  color: var(--version-color);
+}
+
+.btn-second {
+  padding: 16px 29px;
+  background-color: var(--second-accent-color);
 }
 
 .hero-right-photo {
