--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,21 +48,30 @@ p {
   overflow-x: hidden;
 }
 
-.hero-thumb {
-  padding-top: 47px;
+.text-thumb {
   width: 540px;
   min-width: 540px;
 
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hero-text-thumb {
+  margin: 0;
+  padding-top: 47px;
   display: flex;
   flex-direction: column;
   row-gap: 33px;
 }
 
-.hero-title {
+.title {
   font-weight: 900;
+  color: var(--title-color);
+}
+
+.hero-title {
   font-size: 64px;
   line-height: 100%;
-  color: var(--title-color);
 }
 
 .btn-thumb {
@@ -97,13 +106,14 @@ p {
 }
 
 .hero-right-photo {
-  align-self: flex-end;
+  margin-top: 55px;
 }
 
 .section-number {
   position: absolute;
-  bottom: -194px;
+  bottom: -250px;
   left: 50%;
+  transform: translateX(-50%);
 
   display: flex;
   justify-content: center;
@@ -116,6 +126,7 @@ p {
   font-size: 16px;
   line-height: 162%;
 
+  background-color: #fff;
   border: 1px solid rgba(135, 135, 157, 0.25);
   border-radius: 50%;
 }
@@ -124,8 +135,8 @@ p {
   position: absolute;
   top: 0;
   left: 50%;
-
   transform: translateY(-100%);
+
   content: "";
   width: 1px;
   height: 84px;
@@ -133,7 +144,7 @@ p {
   background-color: rgba(135, 135, 157, 0.25);
 }
 
-/* ===================================================== */
+/* ======================== hero ============================= */
 
 .container {
   width: 1110px;
@@ -144,6 +155,7 @@ p {
 .photos-list {
   list-style: none;
   padding: 0;
+  margin-bottom: 80px;
 
   display: flex;
   gap: 30px;
@@ -162,4 +174,41 @@ p {
 .photo {
   width: 100%;
   object-fit: cover;
+}
+
+/* ========================= smarter-section ============================ */
+
+.smarter-section {
+  position: relative;
+  margin-bottom: 184px;
+}
+
+.accent-text {
+  margin-bottom: 16px;
+
+  font-weight: 900;
+  font-size: 16px;
+  line-height: 162%;
+  letter-spacing: 0.25em;
+  text-transform: uppercase;
+  color: var(--accent-color);
+}
+
+.second-title {
+  font-size: 40px;
+  line-height: 110%;
+
+  margin-bottom: 32px;
+}
+
+.section-number-second {
+  bottom: -212px;
+}
+
+/* ========================= footer ============================ */
+
+footer {
+  height: 308px;
+
+  background-color: var(--accent-color);
 }
