--- a/styles/styles.css
+++ b/styles/styles.css
@@ -148,7 +148,8 @@ p {
 /* ======================== hero ============================= */
 
 .container {
-  width: 1110px;
+  width: 1140px;
+  padding: 0 15px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -232,19 +233,26 @@ p {
 
 .footer-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: flex-start;
 }
 
 .footer-title {
   max-width: 350px;
-  margin-right: 192px;
+  margin-right: 125px;
+
+  font-size: 40px;
+  line-height: 110%;
   color: var(--second-text-color);
+}
+
+.footer-text {
+  max-width: 350px;
 }
 
 .btn-footer {
   margin-left: 92px;
-  /* align-self: center; */
+  align-self: center;
   background-color: var(--second-accent-color);
 }
 
