--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,7 +33,7 @@ p {
 
 .header {
   padding-top: 80px;
-  padding-bottom: 61px;
+  padding-bottom: 54px;
 }
 
 /* ======================== hero ============================= */
@@ -45,22 +45,12 @@ p {
   margin-bottom: 314px;
 }
 
-.overflow-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  column-gap: 88px;
+.overflow-hidden {
+  padding-top: 54px;
+  padding-bottom: 8px;
 
+  min-height: 365px;
   overflow-x: hidden;
-}
-
-@media screen and (max-width: 1140px) {
-  .overflow-wrapper {
-    flex-wrap: wrap;
-  }
-  .hero-text-thumb {
-    order: 3;
-  }
 }
 
 .text-thumb {
@@ -72,11 +62,32 @@ p {
 }
 
 .hero-text-thumb {
-  margin: 0;
-  margin-top: 47px;
+  position: relative;
+
   display: flex;
   flex-direction: column;
   row-gap: 33px;
+
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hero-text-thumb::before {
+  position: absolute;
+  content: url(../assets/desktop/image-hero-left.png);
+  top: -47px;
+  left: -88px;
+  transform: translate(-100%, 0);
+  line-height: 0;
+}
+
+.hero-text-thumb::after {
+  position: absolute;
+  content: url(../assets/desktop/image-hero-right.png);
+  top: 8px;
+  right: -88px;
+  transform: translate(100%, 0);
+  line-height: 0;
 }
 
 .title {
@@ -130,10 +141,6 @@ p {
 .btn-second:hover,
 .btn-second:focus {
   background-color: var(--second-accent-color-hover);
-}
-
-.hero-right-photo {
-  margin-top: 55px;
 }
 
 .section-number {
@@ -293,9 +300,22 @@ p {
 /* +++++++++++++++++++++++++ media +++++++++++++++++++++++++ */
 /* ========================= header ========================= */
 
-/* @media screen and (max-width: 1140px) {
+@media screen and (max-width: 1156px) {
+  .overflow-hidden {
+    padding-top: 385px;
+  }
 
-  
-} */
+  .hero-text-thumb::before {
+    top: -72px;
+    left: 50%;
+    transform: translate(calc(-100% - 16px), -100%);
+  }
+
+  .hero-text-thumb::after {
+    top: -72px;
+    right: 50%;
+    transform: translate(calc(100% + 16px), -100%);
+  }
+}
 
 /* ========================= hero ========================= */
