--- a/styles/styles.css
+++ b/styles/styles.css
@@ -102,6 +102,7 @@ p {
 
 .btn-thumb {
   display: flex;
+  flex-wrap: wrap;
   gap: 16px;
 
   margin-left: auto;
@@ -229,6 +230,9 @@ p {
 }
 
 .second-title {
+  display: inline-block;
+  max-width: 445px;
+
   font-size: 40px;
   line-height: 110%;
 
@@ -297,7 +301,9 @@ p {
   background-color: var(--second-accent-color-hover);
 }
 
-/* +++++++++++++++++++++++++ media +++++++++++++++++++++++++ */
+/* <<<<<<<<<<<<<<<<<<<<<<<<< media >>>>>>>>>>>>>>>>>>>>>>>>> */
+
+/* +++++++++++++++++++++++++ tablet +++++++++++++++++++++++++ */
 
 @media screen and (max-width: 1156px) {
   body {
@@ -316,20 +322,34 @@ p {
     padding-top: 385px;
   }
 
+  .text-thumb {
+    width: 573px;
+    min-width: 573px;
+  }
+
+  .hero-text-thumb {
+    width: 457px;
+    min-width: 457px;
+    row-gap: 24px;
+  }
+
   .hero-text-thumb::before {
+    content: url(../assets/tablet/image-hero.png);
     top: -72px;
     left: 50%;
-    transform: translate(calc(-100% - 16px), -100%);
+    transform: translate(-50%, -100%);
   }
 
   .hero-text-thumb::after {
-    top: -72px;
-    right: 50%;
-    transform: translate(calc(100% + 16px), -100%);
+    display: none;
   }
 
   .hero-title {
     font-size: 48px;
+  }
+
+  .btn-thumb {
+    margin-top: 8px;
   }
 
   .section-number {
@@ -401,5 +421,113 @@ p {
 
   .btn-footer {
     margin-left: 0;
+  }
+}
+
+/* +++++++++++++++++++++++++ tablet +++++++++++++++++++++++++ */
+
+/* +++++++++++++++++++++++++ mobile +++++++++++++++++++++++++ */
+
+@media screen and (max-width: 767px) {
+  body {
+    font-size: 16px;
+    line-height: 162%;
+  }
+
+  /* ========================= header ========================= */
+  /* ========================= hero ========================= */
+
+  .hero {
+    margin-bottom: 268px;
+  }
+
+  .overflow-hidden {
+    padding-top: 201px;
+  }
+
+  .text-thumb {
+    min-width: 327px;
+    width: 327px;
+  }
+
+  .hero-text-thumb::before {
+    top: 27px;
+    left: 50%;
+    transform: translate(-50%, -100%) scale(0.5048780488);
+  }
+
+  .hero-title {
+    font-size: 40px;
+    line-height: 110%;
+  }
+
+  .btn-thumb {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .section-number {
+    bottom: -189px;
+  }
+
+  /* ========================= smarter-section ========================= */
+  .smarter-section {
+    margin-bottom: 176px;
+  }
+
+  .container {
+    width: 375px;
+    min-width: 375px;
+    padding: 0 24px;
+  }
+
+  .photos-list {
+    margin-bottom: 64px;
+    gap: 25px;
+    flex-wrap: wrap;
+  }
+
+  .photos-item {
+    width: 151px;
+    height: 143px;
+  }
+
+  .second-title {
+    font-size: 32px;
+    line-height: 112%;
+  }
+
+  .section-number-second {
+    bottom: -204px;
+  }
+
+  /* ========================= footer ============================ */
+
+  .footer {
+    padding: 92px 0 72px 0;
+
+    background-image: linear-gradient(
+        rgba(77, 150, 168, 0.8955) 0%,
+        rgba(77, 150, 168, 0.8955) 100%
+      ),
+      url(../assets/mobile/image-footer.jpg);
+  }
+
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .footer-title {
+    margin-bottom: 24px;
+
+    font-size: 32px;
+    line-height: 112%;
+  }
+
+  .footer-text {
+    margin-bottom: 32px;
   }
 }
