--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,4 +4,9 @@
 
 @import "./components/title";
 @import "./components/button";
+@import "./components/text-thumb";
 @import "./components/section-number";
+
+@import "./layout/header";
+@import "./layout/herro";
+@import "./layout/smarter-section";
