--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,20 @@ p {
   margin: 0;
 }
 
+/* +++++++++++++++++++++++++ tablet +++++++++++++++++++++++++ */
+@media screen and (max-width: 1156px) {
+  body {
+    font-size: 16px;
+    line-height: 162%;
+  }
+}
+/* +++++++++++++++++++++++++ mobile +++++++++++++++++++++++++ */
+@media screen and (max-width: 767px) {
+  body {
+    font-size: 16px;
+    line-height: 162%;
+  }
+}
 .container {
   width: 1140px;
   padding: 0 15px;
@@ -159,6 +173,39 @@ p {
     margin-left: 0;
   }
 }
+.text-thumb {
+  width: 540px;
+  min-width: 540px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hero-text-thumb {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  row-gap: 33px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (max-width: 1156px) {
+  .text-thumb {
+    width: 573px;
+    min-width: 573px;
+  }
+  .hero-text-thumb {
+    width: 457px;
+    min-width: 457px;
+    row-gap: 24px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .text-thumb {
+    min-width: 327px;
+    width: 327px;
+  }
+}
 .section-number {
   position: absolute;
   bottom: -250px;
@@ -204,5 +251,156 @@ p {
   }
   .section-number-second {
     bottom: -204px;
+  }
+}
+.header {
+  padding-top: 80px;
+  padding-bottom: 54px;
+}
+
+.hero {
+  position: relative;
+  min-height: 358px;
+  margin-bottom: 314px;
+}
+
+.overflow-hidden {
+  padding-top: 54px;
+  padding-bottom: 8px;
+  min-height: 365px;
+  overflow-x: hidden;
+}
+
+.hero-text-thumb::before {
+  position: absolute;
+  content: url(../assets/desktop/image-hero-left.png);
+  top: -47px;
+  left: -88px;
+  transform: translate(-100%, 0);
+  line-height: 0;
+}
+
+.hero-text-thumb::after {
+  position: absolute;
+  content: url(../assets/desktop/image-hero-right.png);
+  top: 8px;
+  right: -88px;
+  transform: translate(100%, 0);
+  line-height: 0;
+}
+
+.btn-thumb {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* +++++++++++++++++++++++++ tablet +++++++++++++++++++++++++ */
+@media screen and (max-width: 1156px) {
+  .hero {
+    margin-bottom: 287px;
+  }
+  .overflow-hidden {
+    padding-top: 385px;
+  }
+  .hero-text-thumb::before {
+    content: url(../assets/tablet/image-hero.png);
+    top: -72px;
+    left: 50%;
+    transform: translate(-50%, -100%);
+  }
+  .hero-text-thumb::after {
+    display: none;
+  }
+  .btn-thumb {
+    margin-top: 8px;
+  }
+}
+/* +++++++++++++++++++++++++ mobile +++++++++++++++++++++++++ */
+@media screen and (max-width: 767px) {
+  .hero {
+    margin-bottom: 268px;
+  }
+  .overflow-hidden {
+    padding-top: 201px;
+  }
+  .hero-text-thumb::before {
+    top: 27px;
+    left: 50%;
+    transform: translate(-50%, -100%) scale(0.5048780488);
+  }
+  .btn-thumb {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.smarter-section {
+  position: relative;
+  margin-bottom: 184px;
+}
+
+.photos-list {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 80px;
+  display: flex;
+  gap: 30px;
+}
+
+.photos-item {
+  width: 255px;
+  height: 242px;
+  line-height: 0;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.photo {
+  width: 100%;
+  object-fit: cover;
+}
+
+.accent-text {
+  margin-bottom: 16px;
+  font-weight: 900;
+  font-size: 16px;
+  line-height: 162%;
+  letter-spacing: 0.25em;
+  text-transform: uppercase;
+  color: var(--accent-color);
+}
+
+/* +++++++++++++++++++++++++ tablet +++++++++++++++++++++++++ */
+@media screen and (max-width: 1156px) {
+  .smarter-section {
+    margin-bottom: 192px;
+  }
+  .photos-list {
+    margin-bottom: 48px;
+    gap: 11px;
+  }
+  .photos-item {
+    width: 164px;
+    height: 156px;
+    line-height: 0;
+    border-radius: 8px;
+    overflow: hidden;
+  }
+}
+/* +++++++++++++++++++++++++ mobile +++++++++++++++++++++++++ */
+@media screen and (max-width: 767px) {
+  .smarter-section {
+    margin-bottom: 176px;
+  }
+  .photos-list {
+    margin-bottom: 64px;
+    gap: 25px;
+    flex-wrap: wrap;
+  }
+  .photos-item {
+    width: 151px;
+    height: 143px;
   }
 }/*# sourceMappingURL=main.css.map */
